--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,3 +1,8 @@
+@media (max-width: 768px) {
+  .container_contact {
+    flex-direction: column;
+  }
+}
 .footer {
   position: relative;
   min-height: 460px;
@@ -19,12 +24,14 @@
   .container_contact {
     z-index: 10;
     margin-top: 50px;
+    margin-bottom: 30px;
 
     .contact_div {
       padding: 2em;
       border-bottom: 1px ridge rgb(214, 212, 212);
       background: #fff;
       text-align: center;
+      overflow: hidden;
 
       i {
         font-size: 25px;
@@ -39,6 +46,7 @@
         color: #999;
 
         a {
+          word-wrap: break-word;
           color: inherit;
           &:hover {
             text-decoration: none;
@@ -60,3 +68,4 @@
     color: white;
   }
 }
+
