--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -32,6 +32,7 @@
   .container_about {
 
     .welcome_text {
+      min-width: 300px;
       font-size: 24px;
       color: #fff;
       border-top: 5px solid #fff;
@@ -62,7 +63,7 @@
         background: #fff;
       }
       h1 {
-        font-size: 85px;
+        font-size: 65px;
         font-weight: 700;
         margin-bottom: 5px;
         color: $main_color;
