--- a/src/style/components/_experience.scss
+++ b/src/style/components/_experience.scss
@@ -1,10 +1,3 @@
-@media (max-width: 768px) {
-  .container_exp {
-    .img_side {
-      display: none;
-    }
-  }
-}
 #exp {
   position: relative;
   min-height: 440px;
@@ -60,6 +53,20 @@
       background: url(../img/annie-spratt-79272-unsplash.jpg) no-repeat center;
       background-size: cover;
       height: 100%;
+    }
+  }
+}
+@media (max-width: 576px) {
+  #exp {
+    .container_exp {
+      width: 100%;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .container_exp {
+    .img_side {
+      display: none;
     }
   }
 }
